Started on basic design for module.

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,14 +15,6 @@
 
 	<dependencies>
 	
-		<!-- 
-		Add other dependencies from parent's pom:
-		<dependency>
-			<groupId>org.other.library</groupId> 
-			<artifactId>library-name</artifactId>
-		</dependency> 
-		-->
-
 		<!-- Begin OpenMRS core -->
 		
 		<dependency>
@@ -59,7 +51,20 @@
 		</dependency>
 				
 		<!-- End OpenMRS core -->
-		
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>openhmis.commons-api</artifactId>
+			<type>jar</type>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>openhmis.commons-api</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
