Adding the landing pages and a few system files

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -54,6 +54,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>appframework-api</artifactId>
+			<type>jar</type>
+		</dependency>
+
 		<!-- End OpenMRS modules -->
 
 		<!-- Begin OpenMRS core -->
