--- a/omod/src/main/resources/apps/PatientListApp_app.json
+++ b/omod/src/main/resources/apps/PatientListApp_app.json
@@ -8,7 +8,7 @@
 				"id": "${project.parent.groupId}.${project.parent.artifactId}.managePatientListLink",
 				"extensionPointId": "systemAdministration.apps",
 				"type": "link",
-				"label": "Manage Patient List",
+				"label": "Manage Patient Lists",
 				"url": "${project.parent.artifactId}/managePatientList/entities.page#/",
 				"icon": "icon-list-alt",
 				"requiredPrivilege": "Task: Manage Patient List Metadata",
