--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,13 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.powermock</groupId>
+				<artifactId>powermock-module-junit4-rule-agent</artifactId>
+				<version>1.4.10</version>
+				<scope>test</scope>
+			</dependency>
+
+			<dependency>
 				<groupId>org.javatuples</groupId>
 				<artifactId>javatuples</artifactId>
 				<version>1.2</version>
