--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 	<properties>
 			<openmrsPlatformVersion>1.11.6</openmrsPlatformVersion>
 			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+			<powermock.version>1.4.10</powermock.version>
 			<javaCompilerVersion>1.7</javaCompilerVersion>
 	</properties>
 
@@ -229,6 +230,17 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.14</version>
+					<configuration>
+						<argLine>
+							-javaagent:${settings.localRepository}/org/powermock/powermock-module-javaagent/${powermock.version}/powermock-module-javaagent-${powermock.version}.jar
+							-XX:-UseSplitVerifier
+						</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
 					<version>2.9.1</version>
 					<configuration>
@@ -247,6 +259,23 @@
 							<version>3.4.0</version>
 						</dependency>
 					</dependencies>
+				</plugin>
+				<plugin>
+					<groupId>org.liquibase</groupId>
+					<artifactId>liquibase-maven-plugin</artifactId>
+					<version>2.0.5</version>
+					<dependencies>
+						<dependency>
+							<groupId>mysql</groupId>
+							<artifactId>mysql-connector-java</artifactId>
+							<version>5.1.8</version>
+						</dependency>
+					</dependencies>
+					<configuration>
+						<propertyFileWillOverride>true</propertyFileWillOverride>
+						<propertyFile>${basedir}/omod/target/classes/liquibase.properties</propertyFile>
+						<changeLogFile>${basedir}/omod/target/classes/liquibase.xml</changeLogFile>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
