--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -100,7 +100,7 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>visitdocumentsui-omod</artifactId>
-			<version>1.3-SNAPSHOT</version>
+			<version>1.2</version>
 			<scope>provided</scope>
 			<type>jar</type>
 		</dependency>
