--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,14 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.openmrs.module</groupId>
-		<artifactId>patientlist</artifactId>
+		<artifactId>customrestservices</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>patientlist-api</artifactId>
+	<artifactId>customrestservices-api</artifactId>
 	<packaging>jar</packaging>
-	<name>Patient List API</name>
-	<description>API project for Patient List</description>
+	<name>Custom REST Services API</name>
+	<description>Custom REST Services API </description>
 
 	<dependencies>
 
