--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -3,14 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.openmrs.module</groupId>
-		<artifactId>patientlist</artifactId>
+		<artifactId>customrestservices</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>patientlist-omod</artifactId>
+	<artifactId>customrestservices-omod</artifactId>
 	<packaging>jar</packaging>
-	<name>Patient List OMOD</name>
-	<description>Omod submodule for Patient List</description>
+	<name>Custom REST Services OMOD</name>
+	<description>Custom REST Services OMOD</description>
 
 	<dependencies>
 		<!-- Begin OpenMRS modules -->
@@ -122,13 +122,20 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>appui-omod</artifactId>
-			<version>1.0</version>
+			<version>1.4</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>emrapi-omod</artifactId>
 			<version>1.12</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>coreapps-omod</artifactId>
+			<version>1.11.1</version>
 			<scope>provided</scope>
 		</dependency>
 
