--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -146,6 +146,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sksamuel.diff</groupId>
+			<artifactId>diff</artifactId>
+			<version>1.1.11</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
