CRS-10 Fix NPE occurring on the openmrs platform

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -123,6 +123,7 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>appui-omod</artifactId>
 			<version>1.4</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
