--- a/api/pom.xml
+++ b/api/pom.xml
@@ -85,6 +85,13 @@
 			<artifactId>uiframework-api</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
+		<dependency>
+			<groupId>org.eclipse.jgit</groupId>
+			<artifactId>org.eclipse.jgit</artifactId>
+			<version>4.0.0.201506020755-rc3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
