--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>customrestservices</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Custom REST services</name>
 	<description>The OpenHMIS Custom REST Services module.</description>
@@ -28,7 +28,7 @@
 		<connection>scm:git:git@github.com:OpenHMIS/openmrs-module-customrestservices.git</connection>
 		<developerConnection>scm:git:git@github.com:OpenHMIS/openmrs-module-customrestservices.git</developerConnection>
 		<url>https://github.com/OpenHMIS/openmrs-module-customrestservices/</url>
-	  <tag>v1.0.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<modules>
@@ -100,7 +100,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-api</artifactId>
-				<version>3.5.0</version>
+				<version>3.6.0-SNAPSHOT</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -108,7 +108,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-api</artifactId>
-				<version>3.5.0</version>
+				<version>3.6.0-SNAPSHOT</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
@@ -124,7 +124,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-omod</artifactId>
-				<version>3.5.0</version>
+				<version>3.6.0-SNAPSHOT</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -132,7 +132,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-omod_2.x</artifactId>
-				<version>3.5.0</version>
+				<version>3.6.0-SNAPSHOT</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
