--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>customrestservices</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<packaging>pom</packaging>
 	<name>Custom REST services</name>
 	<description>The OpenHMIS Custom REST Services module.</description>
@@ -27,7 +27,7 @@
 		<connection>scm:git:git@github.com:OpenHMIS/openmrs-module-customrestservices.git</connection>
 		<developerConnection>scm:git:git@github.com:OpenHMIS/openmrs-module-customrestservices.git</developerConnection>
 		<url>https://github.com/OpenHMIS/openmrs-module-customrestservices/</url>
-	  <tag>HEAD</tag>
+	  <tag>v2.0.0</tag>
   </scm>
 
 	<modules>
@@ -99,7 +99,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-api</artifactId>
-				<version>3.6.0-SNAPSHOT</version>
+				<version>4.0.0</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -107,7 +107,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-tests</artifactId>
-				<version>3.6.0-SNAPSHOT</version>
+				<version>4.0.0</version>
 				<scope>test</scope>
 			</dependency>
 
@@ -122,7 +122,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-omod</artifactId>
-				<version>3.6.0-SNAPSHOT</version>
+				<version>4.0.0</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -130,7 +130,7 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>openhmis.commons-omod_2.x</artifactId>
-				<version>3.6.0-SNAPSHOT</version>
+				<version>4.0.0</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
